k8s_hybrid/examples/guide/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.henn.dev`)
      kind: Rule
      services:
        - name: whoami
          port: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.henn.dev`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls:
    certResolver: myresolver
